--- a/less/incomes.less
+++ b/less/incomes.less
@@ -17,6 +17,7 @@
 
 		@media @mobile {
 			.mobile-wrap;
+			padding-bottom: 40px;
 		} 
 	}
 
@@ -39,6 +40,10 @@
 			background-color: #6ab980;
 			opacity: 0.8;
 		}
+
+		@media @mobile {
+			font-size: 30px;
+		}
 	}
 
 	&__underheader {
@@ -47,6 +52,11 @@
 		font-family: SFUIHeavy;
 		font-size: 30px;
 		text-align: center;
+
+		@media @mobile {
+			margin-bottom: 40px;
+			font-size: 24px;
+		}
 	}
 }
 
