--- a/less/registration.less
+++ b/less/registration.less
@@ -21,6 +21,7 @@
 
 		@media @mobile {
 			.mobile-wrap;
+			padding-top: 20px;
 		}
 	}
 
@@ -94,7 +95,7 @@
 		font-family: SFUILight;
 
 		@media @mobile {
-			margin-bottom: 10px;
+			margin-bottom: 5px;
 			font-size: 16px;
 		}
 	}
@@ -107,7 +108,7 @@
 		text-transform: uppercase;
 
 		@media @mobile {
-			margin-bottom: 10px;
+			margin-bottom: 5px;
 			font-size: 20px;
 			line-height: 25px;
 		}
@@ -121,6 +122,7 @@
 
 		@media @mobile {
 			font-size: 30px;
+			margin-bottom: 5px;
 		}
 	}
 
