--- a/less/modals.less
+++ b/less/modals.less
@@ -748,8 +748,9 @@
 
 .level-ability {
 	width: 250px;
-	padding: 25px;
+	padding: 10px;
 	border: 1px dashed #6ab980;
+	text-align: center;
 
 	@media @tablet {
 		width: 205px;
@@ -766,7 +767,7 @@
 	}
 
 	&__header {
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 		font-size: 20px;
 		font-family: SFUIHeavy;
 		text-transform: uppercase;
@@ -793,6 +794,56 @@
 
 	@media @tablet {
 		width: 315px;
+	}
+}
+
+.level-details {
+
+	&__wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 25px 30px;
+		background-color: rgba(35, 35, 35, 0.85);
+
+		@media @mobile {
+			flex-wrap: wrap;
+			padding: 10px;
+		}
+	}
+
+	&__text {
+		font-size: 14px;
+		line-height: 24px;
+		color: #d0d0d0;
+		font-family: SFUIRegular;
+
+		@media @mobile {
+			width: 100%;
+			margin-bottom: 10px;
+			line-height: 18px;
+			text-align: center;
+		}
+	}
+
+	&__bottom-text {	
+
+		span {
+			display: inline-block;
+			border-bottom: 2px solid #ed383f;
+		}
+	}
+
+	&__button {
+		padding: 20px 25px;
+		background-color: #ed383f;
+		font-size: 14px;
+
+		@media @mobile {
+			max-width: 100%;
+			margin: 0 auto;
+			padding: 10px 20px;
+		}
 	}
 }
 
