--- a/less/games.less
+++ b/less/games.less
@@ -100,7 +100,8 @@
 	}
 
 	&__item--support,
-	&__item--rules {
+	&__item--rules,
+	&__item--policy {
 		color: #c7c7c7;
 		transition: 0.1s;
 		cursor: pointer;
