--- a/css/style.css
+++ b/css/style.css
@@ -3843,7 +3843,7 @@ form * {
 .level-modal--static {
   position: relative;
   z-index: 1;
-  top: 250px;
+  top: 250px !important;
   display: block;
   width: 100%;
 }
@@ -5597,13 +5597,13 @@ form * {
     margin-bottom: 110px;
   }
   .level-modal--static:nth-child(3) {
-    margin-bottom: 55px;
+    margin-bottom: 15px;
   }
   .level-modal--static:nth-child(4) {
-    margin-bottom: 110px;
+    margin-bottom: 50px;
   }
   .level-modal--static:last-child {
-    margin-bottom: 10px;
+    margin-bottom: 0;
   }
   .level-modal--static .level-ability {
     width: 100%;
