--- a/less/levels.less
+++ b/less/levels.less
@@ -24,7 +24,7 @@
 .level-modal--static {
 	position: relative;
 	z-index: 1;
-	top: 250px;
+	top: 250px !important;
 	display: block;
 	width: 100%;
 
@@ -40,7 +40,7 @@
 		margin-bottom: 110px;
 
 		@media @mobile {
-			margin-bottom: 55px;
+			margin-bottom: 15px;
 		}
 	}
 
@@ -48,7 +48,7 @@
 		margin-bottom: 140px;
 
 		@media @mobile {
-			margin-bottom: 110px;
+			margin-bottom: 50px;
 		}
 	}
 
@@ -56,7 +56,7 @@
 		margin-bottom: 40px;
 
 		@media @mobile {
-			margin-bottom: 10px;
+			margin-bottom: 0;
 		}
 	}
 
