--- a/less/main.less
+++ b/less/main.less
@@ -88,6 +88,7 @@ form {
 
 	&__button {
 		width: 30%;
+		margin-bottom: 10px;
 		padding: 20px;		
 		background-color: #ed383f;
 		font-family: SFUIBold;
