--- a/less/levels.less
+++ b/less/levels.less
@@ -29,7 +29,7 @@
 	width: 100%;
 
 	&:nth-child(2) {
-		margin-bottom: 150px;
+		margin-bottom: 180px;
 
 		@media @mobile {
 			margin-bottom: 110px;
@@ -76,7 +76,7 @@
 		margin-bottom: 20px;
 	}
 
-	.level-ability--fourth {
+	.level-ability--wide {
 		width: 550px;
 
 		@media @tablet {
