--- a/less/everyweek-cashback.less
+++ b/less/everyweek-cashback.less
@@ -234,3 +234,41 @@
 		}
 	}
 }
+
+.cashback-description {
+
+	&__wrapper {
+		width: 1180px;
+		margin: 0 auto;
+		padding-bottom: 100px;
+
+		@media @tablet {
+			width: 748px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
+	}
+
+	&__header {
+		margin-bottom: 20px;
+		text-align: center;
+		font-size: 28px;
+		text-transform: uppercase;
+	}
+
+	&__text-wrapper {
+		width: 800px;
+		margin: 0 auto;
+
+		@media @tablet {
+			width: 100%;
+		}
+	}
+
+	&__text {
+		line-height: 22px;
+		text-align: center;
+	}
+}
